--- a/main/package.json
+++ b/main/package.json
@@ -28,6 +28,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^7.0.1",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   },
